frontend/test/should_fail/computations_decl_use_calls_type_mismatch_proc_001.grg
using model_init;

proc(b:B) : (Node)
{
	return(b);
}

rule r
{
	n:Node;
	modify {
		eval {
			def n2:Node;
			(n2) = proc(n);
		}
	}
}

